update lodge credits to support the two different types
